# rolling-potato

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  GOVERNANCE.md  HANDOFF.md  MAINTAINERS.md  PLAN.md  PRIVACY.md  README.ko.md  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md
config/: release-targets.tsv
docs/: README.md  agent-retrospectives.md  architecture-migration-map.json  architecture.md  backend-adapters.md  benchmarks.md  cli-output-style.md  code-architecture.md  command-policy.md  current-capabilities.md  development.md  glossary.md  hooks.md  korean-output-guard.md  model-eval.md  model-knowledge-base.md  model-licenses.md  model-manifest.md  model-source-policy.md  mvp.md  observability.md  ontology-runtime.md  plugin-adapters.md  plugin-marketplace-policy.md  release-notes-template.md  release-train.md  release.md  runtime-architecture.md  session-memory-context-plan.md  skills.md  state-lifecycle.md  subagents.md  team-runtime.md  threat-model.md  tui.md  v0.29-correction-plan.md  v0.49-web-research-browser-plan.md
src/: app.rs  approval.rs  backend.rs  backend_stream.rs  benchmark.rs  cache.rs  checksum.rs  cli.rs  config.rs  context.rs  evidence.rs  hooks.rs  intent.rs  korean_guard.rs  lease.rs  ledger.rs  lib.rs  main.rs  model.rs  monitor.rs  observability.rs  ontology.rs  patch.rs  paths.rs  plugin.rs  policy.rs  resource.rs  runtime.rs  skill.rs  state.rs  strict_json.rs  subagent.rs  subagent_result.rs  team.rs  team_execution.rs  team_reconciliation.rs  team_state.rs  terminal.rs  transcript.rs  transition.rs  (+3 more)
tests/: inference.rs  (+11 more)
(+487 files in other folders)
